[gd_scene load_steps=18 format=3 uid="uid://vt7tuls2v4nc"]

[ext_resource type="Script" path="res://level.gd" id="1_o3p3f"]
[ext_resource type="PackedScene" uid="uid://swrmk8v420o8" path="res://spike.tscn" id="2_glsrf"]
[ext_resource type="PackedScene" uid="uid://cvfy5y31tavlr" path="res://platform.tscn" id="3_7onxw"]
[ext_resource type="PackedScene" uid="uid://ccgwvloem1uo6" path="res://player.tscn" id="3_bm2el"]
[ext_resource type="Texture2D" uid="uid://b1bcu78s8t0gj" path="res://background_layer_2.png" id="3_t6ksg"]
[ext_resource type="Texture2D" uid="uid://botaena1xr3ar" path="res://rock_1.png" id="4_ekf0n"]
[ext_resource type="Texture2D" uid="uid://bu6hps2ikvfdh" path="res://shop.png" id="5_trgc0"]
[ext_resource type="Texture2D" uid="uid://chkc3n74q2u12" path="res://grass_1.png" id="6_bc20c"]
[ext_resource type="Texture2D" uid="uid://dphdqcwyyeqg" path="res://grass_3.png" id="7_fq3gt"]
[ext_resource type="PackedScene" uid="uid://h3pmuy55v1ob" path="res://multiplayer.tscn" id="10_j14g4"]
[ext_resource type="PackedScene" uid="uid://d2o6ipr68yfth" path="res://shadow.tscn" id="10_q0qsd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pa16e"]
size = Vector2(144, 35)

[sub_resource type="Gradient" id="Gradient_jvxhw"]
offsets = PackedFloat32Array(0, 0.800866)
colors = PackedColorArray(0, 0.172549, 0, 1, 0.227242, 0.138715, 0.0777053, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_c1g8b"]
gradient = SubResource("Gradient_jvxhw")
width = 10

[sub_resource type="RectangleShape2D" id="RectangleShape2D_galem"]
size = Vector2(214.235, 911)

[sub_resource type="Theme" id="Theme_wy2fn"]
default_font_size = 65

[sub_resource type="Theme" id="Theme_wo655"]
default_font_size = 75

[node name="level" type="Node2D"]
script = ExtResource("1_o3p3f")
spike_scene = ExtResource("2_glsrf")
platform_scene = ExtResource("3_7onxw")

[node name="BackgroundLayer2" type="Sprite2D" parent="."]
scale = Vector2(4.2, 4.2)
texture = ExtResource("3_t6ksg")
centered = false

[node name="Rock1" type="Sprite2D" parent="."]
position = Vector2(312, 738)
scale = Vector2(5.55, 5.77273)
texture = ExtResource("4_ekf0n")

[node name="Shop" type="Sprite2D" parent="."]
position = Vector2(28, 605)
texture = ExtResource("5_trgc0")

[node name="Grass1" type="Sprite2D" parent="."]
position = Vector2(886, 756)
scale = Vector2(7.5, 8.16666)
texture = ExtResource("6_bc20c")

[node name="Grass3" type="Sprite2D" parent="."]
position = Vector2(954, 753)
scale = Vector2(3.05556, 5)
texture = ExtResource("7_fq3gt")

[node name="player" parent="." node_paths=PackedStringArray("level") instance=ExtResource("3_bm2el")]
position = Vector2(32, 735)
level = NodePath("..")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(47, 661)
scale = Vector2(-0.119998, 0.959999)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(177, 0)
shape = SubResource("RectangleShape2D_pa16e")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D2/CollisionShape2D"]
position = Vector2(3.51196, -0.374996)
scale = Vector2(111.005, 18.75)
texture = SubResource("GradientTexture1D_c1g8b")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(404, 770)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(177, 0)
shape = SubResource("RectangleShape2D_pa16e")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D/CollisionShape2D"]
position = Vector2(0.500031, -0.374996)
scale = Vector2(1155, 18.75)
texture = SubResource("GradientTexture1D_c1g8b")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="spikes" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1258, 324.5)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-125, 122.5)
shape = SubResource("RectangleShape2D_galem")

[node name="backwall" type="Area2D" parent="."]
position = Vector2(-108, 515)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="backwall"]
shape = SubResource("RectangleShape2D_galem")

[node name="spawn" type="Node2D" parent="."]
position = Vector2(28, 735)

[node name="level_text" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -11.0
offset_right = 193.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.71968, 1.81715)
size_flags_horizontal = 4
theme = SubResource("Theme_wy2fn")
theme_override_colors/font_color = Color(0.286413, 0.61179, 0.427645, 1)
text = "level"
metadata/_edit_use_anchors_ = true

[node name="mode" type="Label" parent="."]
offset_left = 19.0
offset_top = 98.0
offset_right = 409.0
offset_bottom = 201.0
scale = Vector2(0.4128, 1.08571)
theme = SubResource("Theme_wo655")
text = "easy mode"
metadata/_edit_use_anchors_ = true

[node name="platforms" type="Node2D" parent="."]

[node name="shadow" parent="." instance=ExtResource("10_q0qsd")]
position = Vector2(-30, 0)

[node name="multiplayer" parent="." instance=ExtResource("10_j14g4")]
player_placeholder = ExtResource("10_q0qsd")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_endzone_entered"]
[connection signal="body_entered" from="backwall" to="." method="_backwall_entered"]
